Improvements of user actions